# CellNeighborEX-v2

./: .gitignore  LICENSE  MANIFEST.in  README.md  gitignore.txt  pyproject.toml  requirements.txt
CellNeighborEX/: __init__.py  ccigenes.py  ccipairs.py  ccisignal.py  utils.py
CellNeighborEX/database/: cellchat_human.csv  cellchat_mouse.csv  celltalk_human.csv  celltalk_mouse.csv  omnipath_rat.csv
execution_scripts/: main.py  main_lymph.py  run_cnex2.sh  run_cnex2_lymph.sh
tutorials/: 01.Synthetic_Benchmark.ipynb  03.Mouse_Liver_Cancer.ipynb  04.Human_Ovarian_Cancer.ipynb  05.Human_Colorectal_Cancer.ipynb  06.Mouse_Lymph_Node.ipynb
