[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "CellNeighborEX"
version = "2.0.0"
description = "Database-free identification of cell-cell interaction genes from spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name="Hyobin Kim" }
]

license = { file="LICENSE" }

dependencies = [
    "scanpy",
    "scvi-tools",
    "cell2location",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "anndata",
    "tqdm"
]


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
include = ["CellNeighborEX*"]